Improve the notify_script and allow it to be called from another custom keyboard shortcut

--- a/moc.config
+++ b/moc.config
@@ -651,7 +651,7 @@ MessageLingerTime = 1
 #
 # Example:    OnSongChange = "/home/jack/.moc/myscript %a %r"
 #
-OnSongChange = "/home/miguelgraz/.moc/notify_script.sh %a %t"
+OnSongChange = "/home/miguelgraz/.moc/notify_script.sh"
 
 # If RepeatSongChange is 'yes' then MOC will execute the command every time
 # a song starts playing regardless of whether or not it is just repeating.
