--- a/.gitconfig
+++ b/.gitconfig
@@ -10,5 +10,6 @@
 [alias]
 	stash = stash --include-untracked
 	hist = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	histmine = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --author=miguelgraz
 [push]
 	default = current
