--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 	meta = yellow
 [user]
 	email = miguelgraz@gmail.com
-	name = Miguel Grazziotin
+	name = Miguel Schmitz Grazziotin
 [core]
 	editor = subl -n -w
 [alias]
